--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,72 @@
-.App {
+
+.App{
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-direction: column;
+   padding: 30px;
+   background-image: url("https://img.freepik.com/free-photo/high-angle-view-laptop-stationeries-blue-background_23-2147880456.jpg?semt=ais_hybrid&w=740");
+   background-repeat: no-repeat;
+   background-size: cover;
+   
+}
+.form-container{
+  width: 400px;
+  padding: 20px;
+  border:1px solid rgb(12, 12, 12);
+  border-radius: 8px;
+  box-shadow:2px 2px 10px grey;
+  margin: 30px;;
+
+}
+.form-container div{
+  margin-bottom: 20px;
+}
+label{
+  display: black;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+input,select{
+  width: 100%;
+  padding: 8px;
+  box-sizing: border-box;
+}
+button{
+  cursor: pointer;
+  height: 60px;
+  width: 160px;
+  background-color: black;
+  color: rgb(193, 193, 35);
   text-align: center;
+  font-size: 20px;
 }
+button:hover{
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  background-color: rgb(154, 154, 145);
+  color: black;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.tabs{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-bottom: 20px;
 }
-
-.App-link {
-  color: #61dafb;
+.tab-link{
+  text-decoration: none;
+  padding: 10px 20px;
+  margin:0 10px;
+  border:2px soild blueviolet;
+  border-radius: 5px;
+  color: rgb(21, 22, 22);
+  font-weight: bold;
+  transition: 0.3s ease;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.tab-link:hover{
+  background-color: rgb(21, 110, 198);
+  color: rgb(10, 10, 10);
+}
+.error{
+  color: rgb(179, 41, 10);
+  font-size: 0.9rem;
+  margin-top:5px ;
 }
